src/modules/emote_menu/components/EmoteList.module.css
.emoteListRoot {
  display: flex;
  flex-direction: column;
}

.listViewport {
  flex: 1;
  min-height: 0;
  min-width: 0;
}

.emotesContainer {
  flex: 1;
  width: 100%;
  overflow-y: scroll;
}

.header {
  background-color: var(--mantine-color-body-secondary);
  color: var(--mantine-color-text);
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: left;
  position: sticky;
  top: 0;
}

.headerIcon {
  display: flex;
  width: 24px;
  height: 24px;
  margin-right: 4px;
  align-items: center;
  justify-content: center;
  padding: 4px;
  box-sizing: border-box;

  svg {
    width: 100% !important;
  }
}

.headerText {
  text-transform: uppercase;
  font-weight: 700;
}

.row {
  display: flex;
  justify-content: left;
  width: 100%;
}

.row,
.header {
  padding: 0 8px;
}

.empty {
  display: flex;
  align-items: center;
  width: 100%;
  height: 100%;
  flex-direction: column;
  row-gap: 8px;
  justify-content: center;

  .emptyIcon {
    width: 24px;
    height: 24px;
  }
}

